--- a/html_portfolio/CartoonCharacter.html
+++ b/html_portfolio/CartoonCharacter.html
@@ -65,7 +65,7 @@
     <!-- Header End -->
     
     <!-- Breadcrumb Begin -->
-    <div class="breadcrumb-option spad set-bg" data-setbg="img/Bannière.jpg">
+    <div class="breadcrumb-option spad set-bg" data-setbg="img/CartoonCharacter/BannerCartoonCharacter.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -87,7 +87,7 @@
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="about__pic__item about__pic__item--large set-bg"
-                                    data-setbg="./img/CartoonCharacterUp.png"></div>
+                                    data-setbg="./img/CartoonCharacter/CartoonCharacterUp.png"></div>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="row">
@@ -105,11 +105,11 @@
                 <div class="col-lg-6">
                     <div class="about__text">
                         <div class="section-title">
-                            <span>About me</span>
-                            <h2>Who I am?</h2>
+                            <span>Cartoon Character</span>
+                            <h2>Its history</h2>
                         </div>
                         <div class="about__text__desc">
-                            <p>I'm Malo Muylaert and I have 17 years old. I'm a high school student in final class of the high school Sain Adrien La Salle.<br>First, at 12, I started computer coding by coding python, javascript. Then during my thirteenth year, I started graphic design by making logos, banners... Finally, at the age of 14, I took a passion for drawing and I learned to draw all by myself. So I arrived here today.<br>Right now my goal is just to get into a digital art school to gain experience and skills to develop myself but after a school like this I would like to become a digital artist in 2D animation. This could be character animation for cartoons but also for commercials.</p>
+                            <p>On January 14, 2023, I had an idea. At that time I was looking for what I could do in drawing and what really attracted me. What was my style and what did I want to show?<br>So at a time when I was sleeping, because that's when I have the most ideas, I had a click in my head. An image. The one of a cartoon character that looked like me. After this click, I got up and drew. I drew this cartoon character that had just appeared in my head. After I drew it I officially knew that the cartoon style was the style I wanted to have. <br>So that's the story of this wonderful design that made me realize the style I wanted to have.</p>
                         </div>
                     </div>
                 </div>
@@ -118,84 +118,6 @@
     </section>
     <!-- Services Section End -->
 
-    <!-- Work Section Begin -->
-    <section class="work">
-        <div class="work__gallery">
-            <div class="grid-sizer"></div>
-            <div class="work__item wide__item set-bg" data-setbg="../img/work/Wallpaper.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Monster Cartoon Wallpaper</h4>
-                    <ul>
-                        <li>Monster</li>
-                        <li>Digital drawing</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="work__item small__item set-bg" data-setbg="../img/work/CartoonCharacter.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Cartoon Character</h4>
-                    <ul>
-                        <li>Cartoon</li>
-                        <li>Digital drawing</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="work__item small__item set-bg" data-setbg="../img/work/CartoonCharacterProfil.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Cartoon character in profile</h4>
-                    <ul>
-                        <li>Cartoon</li>
-                        <li>Digital drawing</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="work__item large__item set-bg" data-setbg="../img/work/drake.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Inktober</h4>
-                    <ul>
-                        <li>Monster</li>
-                        <li>Digital Drawing</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="work__item small__item set-bg" data-setbg="../img/work/Simple.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Simple Factory</h4>
-                    <ul>
-                        <li>Design</li>
-                        <li>Clothing Virtualy</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="work__item small__item set-bg" data-setbg="../img/work/GreenTeam.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Green Team</h4>
-                    <ul>
-                        <li>Design</li>
-                        <li>Work</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="work__item wide__item set-bg" data-setbg="../img/work/BD.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Pencil BD</h4>
-                    <ul>
-                        <li>Digital Drawing</li>
-                        <li>Storyboard</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Work Section End -->
-
     <!-- Footer Section Begin -->
     <footer class="footer">
         <div class="container">
@@ -203,7 +125,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
                         <div class="footer__top__logo">
-                            <a href="#"><img src="../img/logo2.png" alt=""></a>
+                            <a href="#"><img src="../img/logo.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
@@ -227,7 +149,7 @@
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-3">
                         <div class="footer__option__item">
-                            <h5>Who we are</h5>
+                            <h5>Who I am</h5>
                             <ul>
                                 <li><a href="../contact.html">Contact us</a></li>
                             </ul>
