--- a/html_portfolio/LogoGreenTeam.html
+++ b/html_portfolio/LogoGreenTeam.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="../css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="../css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="./css/style_CartoonCharacter.css" type="text/css">
+    <link rel="stylesheet" href="./css/style_GreenTeam.css" type="text/css">
 
     <script src="https://kit.fontawesome.com/46047fbeed.js" crossorigin="anonymous"></script>
 </head>
@@ -65,12 +65,12 @@
     <!-- Header End -->
     
     <!-- Breadcrumb Begin -->
-    <div class="breadcrumb-option spad set-bg" data-setbg="img/Bannière.jpg">
+    <div class="breadcrumb-option spad set-bg" data-setbg="img/GreenTeam/BannerGreenTeam.png">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
-                        <h2>Cartoon Character</h2>
+                        <h2>The logo of the Green Team</h2>
                     </div>
                 </div>
             </div>
@@ -87,15 +87,15 @@
                         <div class="row">
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="about__pic__item about__pic__item--large set-bg"
-                                    data-setbg="./img/CartoonCharacterUp.png"></div>
+                                    data-setbg="./img/GreenTeam/Logo.png"></div>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <div class="about__pic__item set-bg" data-setbg="../img/portfolio/CartoonCharacter.png"></div>
+                                        <div class="about__pic__item set-bg" data-setbg="./img/GreenTeam/GreenTeamAffiche1.png"></div>
                                     </div>
                                     <div class="col-lg-12">
-                                        <div class="about__pic__item set-bg" data-setbg="../img/work/CartoonCharacterProfil.png"></div>
+                                        <div class="about__pic__item set-bg" data-setbg="./img/GreenTeam/GreenTeamAffiche2.png"></div>
                                     </div>
                                 </div>
                             </div>
@@ -105,11 +105,11 @@
                 <div class="col-lg-6">
                     <div class="about__text">
                         <div class="section-title">
-                            <span>About me</span>
-                            <h2>Who I am?</h2>
+                            <span>The Logo of the Green Team</span>
+                            <h2>Its history</h2>
                         </div>
                         <div class="about__text__desc">
-                            <p>I'm Malo Muylaert and I have 17 years old. I'm a high school student in final class of the high school Sain Adrien La Salle.<br>First, at 12, I started computer coding by coding python, javascript. Then during my thirteenth year, I started graphic design by making logos, banners... Finally, at the age of 14, I took a passion for drawing and I learned to draw all by myself. So I arrived here today.<br>Right now my goal is just to get into a digital art school to gain experience and skills to develop myself but after a school like this I would like to become a digital artist in 2D animation. This could be character animation for cartoons but also for commercials.</p>
+                            <p>In moral and civic education in high school, I had to create a poster for a political party in groups of 4. The political party that we chose to create is a political party on ecology that we named: Green Team. <br>Let's now come to the research of the design. First of all, as the party is on the theme of ecology, I immediately thought of a poster with green colors. Then for the logo, as the leaf is often used to represent something ecological I wanted to use it. So we see the planet Earth with leaves spinning around. The brown color instead of black for the planet Earth allows to bring back a link with the earth.<br>For the second page, I chose to put the logo in big size to put it in front with the texts which surrounds it a little to be able to have this link between the planet and what we say. I also drew small drawings that go with what the text says. </p>
                         </div>
                     </div>
                 </div>
@@ -118,84 +118,6 @@
     </section>
     <!-- Services Section End -->
 
-    <!-- Work Section Begin -->
-    <section class="work">
-        <div class="work__gallery">
-            <div class="grid-sizer"></div>
-            <div class="work__item wide__item set-bg" data-setbg="../img/work/Wallpaper.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Monster Cartoon Wallpaper</h4>
-                    <ul>
-                        <li>Monster</li>
-                        <li>Digital drawing</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="work__item small__item set-bg" data-setbg="../img/work/CartoonCharacter.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Cartoon Character</h4>
-                    <ul>
-                        <li>Cartoon</li>
-                        <li>Digital drawing</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="work__item small__item set-bg" data-setbg="../img/work/CartoonCharacterProfil.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Cartoon character in profile</h4>
-                    <ul>
-                        <li>Cartoon</li>
-                        <li>Digital drawing</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="work__item large__item set-bg" data-setbg="../img/work/drake.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Inktober</h4>
-                    <ul>
-                        <li>Monster</li>
-                        <li>Digital Drawing</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="work__item small__item set-bg" data-setbg="../img/work/Simple.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Simple Factory</h4>
-                    <ul>
-                        <li>Design</li>
-                        <li>Clothing Virtualy</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="work__item small__item set-bg" data-setbg="../img/work/GreenTeam.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Green Team</h4>
-                    <ul>
-                        <li>Design</li>
-                        <li>Work</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="work__item wide__item set-bg" data-setbg="../img/work/BD.png">
-                <a href="#"></a>
-                <div class="work__item__hover">
-                    <h4>Pencil BD</h4>
-                    <ul>
-                        <li>Digital Drawing</li>
-                        <li>Storyboard</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Work Section End -->
-
     <!-- Footer Section Begin -->
     <footer class="footer">
         <div class="container">
@@ -203,7 +125,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
                         <div class="footer__top__logo">
-                            <a href="#"><img src="../img/logo2.png" alt=""></a>
+                            <a href="#"><img src="../img/logo.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
@@ -221,13 +143,13 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="footer__option__item">
                             <h5>About us</h5>
-                            <p>I'm Malo Muylaert and I have 17 years old. I'm a high school student in final class of the high school Sain Adrien La Salle.</p>
+                            <p>I'm Malo Muylaert and I have 17 years old. I'm a high school student in final class of Saint Adrien La Salle.</p>
                             <a href="../about.html" class="read__more">Read more <span class="arrow_right"></span></a>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-3">
                         <div class="footer__option__item">
-                            <h5>Who we are</h5>
+                            <h5>Who I am</h5>
                             <ul>
                                 <li><a href="../contact.html">Contact us</a></li>
                             </ul>
